# mobility_agent

./: .env  .gitignore  Modelfile  README.md  example_usage.ipynb  exp0_data_visualization.ipynb  exp1_agent.ipynb  exp1_baseline.ipynb  exp1_mode.ipynb  exp1_ste1_agent2.ipynb  exp1_step1_agent.ipynb  exp1_step2_analysis.ipynb  exp1_step2_baseline.ipynb  exp1_step3_analysis.ipynb  exp1_step3_more_results.ipynb  exp2_abm.ipynb  exp2_step1_abm.ipynb  exp2_step2_analysis.ipynb  pyproject.toml  result.csv
.ipynb_checkpoints/: README-checkpoint.md  example_usage-checkpoint.ipynb  exp2_abm-checkpoint.ipynb
agents/: agents_cambridge.csv  agents_cambridge_noref.csv  agents_cambridge_ref.csv  agents_cambridge_sim2.csv  sim_pois.csv
agents/cambridge/: agent_-104143511690234811.json  agent_-1044225862081702222.json  agent_-1052530962388831840.json  agent_-1061055387966826068.json  agent_-1103129493946160049.json  agent_-1105212078294386069.json  agent_-1174044441902877966.json  agent_-1179574885352126631.json  agent_-1252187647439440567.json  agent_-1334680028137887374.json  agent_-1387349700177264954.json  agent_-1414940878412771096.json  agent_-1415840217434857719.json  agent_-1437936848807134483.json  agent_-150034672017534672.json  agent_-1540829756702162891.json  (+495 more)
baseline/: base_model.py  data.py  eval.py  multilayer_perceptron.py  random_forest.py  train.py  xgboost.py
mobility_agent/: agent.py  graph.py  tools.py
models/: mobility_agent_sf_0.csv  mobility_agent_sf_1000.csv  scores.csv
results/: factor_analysis.csv  llm_scores.csv  scores.csv
(+2706 files in other folders)
