[project]
name = "mobility-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.8.0.post1",
    "faker>=35.2.2",
    "gdown>=5.2.0",
    "geopandas",
    "geopy>=2.4.1",
    "hf-xet>=1.0.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "openai>=1.76.0",
    "pandas>=2.0.3",
    "pydeck>=0.9.1",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.2.1",
    "shapely>=2.0.7",
    "widgetsnbextension>=4.0.14",
    "xgboost>=2.1.4",
]
